@@ -225,12 +225,13 @@ REUSE-ADDRESS sets the SO_REUSEADDR socket option on SOCKET."))
 BACKLOG specifies the maximum length of the queue of pending connections."))
 
 (defgeneric accept-connection (passive-socket &key &allow-other-keys)
-  (:documentation "Returns one connection from the queue of pending connections on SOCKET.
-If WAIT is true, waits until a connection is received or TIMEOUT expires in which case returns NIL.
-If WAIT is false and there are no pending connections return NIL.
+  (:documentation "Extracts the first connection from the queue of pending connections on SOCKET.
+WAIT specifies how long to wait for a connection: NIL means \"return immediately\", a non-negative real
+specifies a timeout in seconds and T means \"wait forever\".
 EXTERNAL-FORMAT optionally specifies the external format of the new socket - the default being
 that of SOCKET. Buffer sizes for the new socket can also be specified using INPUT-BUFFER-SIZE
-and OUTPUT-BUFFER-SIZE."))
+and OUTPUT-BUFFER-SIZE.
+If a connection is received, returns two values: the newly created socket and the remote host address."))
 
 (defclass socket-stream-internet-active
     (active-socket stream-socket internet-socket) ()
